[tool.poetry]
name = "catapi"
version = "0.1.0"
description = ""
authors = ["Vadym Kovryzhkin <vadim.kovrizhkin@dev.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pytest = "^7.2.2"
jsonschema = "^4.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
